--- a/index.html
+++ b/index.html
@@ -4,80 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comiks</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    :root {
-      --bg-color: #f0f0f0;
-      --text-color: #333;
-    }
-
-    [data-theme="dark"] {
-      --bg-color: #333;
-      --text-color: #f0f0f0;
-    }
-
-    .header {
-      background-color: var(--text-color);
-      color: var(--bg-color);
-      padding: 15px;
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    .comic-container {
-      margin-top: 20px;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    .nav-buttons {
-      margin-top: 20px;
-    }
-
-    button {
-      padding: 10px 20px;
-      margin: 10px;
-      background-color: var(--text-color);
-      color: var(--bg-color);
-      border: none;
-      cursor: pointer;
-      font-size: 16px;
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    button:disabled {
-      background-color: #aaa;
-      cursor: not-allowed;
-    }
-
-    .mode-toggle {
-      position: absolute;
-      top: 10px;
-      right: 20px;
-      padding: 10px;
-      background-color: transparent;
-      border: none;
-      font-size: 24px;
-      cursor: pointer;
-      transition: color 0.3s;
-      color: var(--text-color);
-    }
-
-    .mode-toggle:focus {
-      outline: none;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -96,45 +23,6 @@
     <button id="next-button" onclick="changeImage(1)">Próximo</button>
   </div>
 
-  <script>
-    // Lista de imagens dentro da pasta "The Comics"
-    const images = [
-      'The Comics/comic1.png',
-      'The Comics/comic2.png',
-      'The Comics/comic3.png'
-    ];
-
-    let currentIndex = 0;
-
-    // Função para mudar a imagem
-    function changeImage(direction) {
-      currentIndex += direction;
-
-      // Atualiza a imagem
-      document.getElementById('comic-image').src = images[currentIndex];
-
-      // Desabilita o botão "Anterior" se estivermos na primeira imagem
-      document.getElementById('prev-button').disabled = currentIndex === 0;
-
-      // Desabilita o botão "Próximo" se estivermos na última imagem
-      document.getElementById('next-button').disabled = currentIndex === images.length - 1;
-    }
-
-    // Função para alternar entre modo claro e escuro
-    function toggleTheme() {
-      const body = document.body;
-      const currentTheme = body.getAttribute('data-theme');
-      const modeToggle = document.querySelector('.mode-toggle');
-
-      if (currentTheme === 'dark') {
-        body.removeAttribute('data-theme');
-        modeToggle.textContent = '🌙'; // Lua para modo escuro
-      } else {
-        body.setAttribute('data-theme', 'dark');
-        modeToggle.textContent = '☀️'; // Sol para modo claro
-      }
-    }
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
