--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h1>Comiks</h1>
     <div class="language-select">
       <label for="language">Língua:</label>
-      <select id="language">
-        <option value="pt">Português</option>
-        <option value="en">Inglês</option>
+      <select id="language" onchange="changeLanguage(this.value)">
+        <option value="pt-br">Português</option>
+        <option value="eng">Inglês</option>
       </select>
     </div>
   </div>
@@ -27,7 +27,7 @@
 
   <div class="nav-buttons">
     <button id="prev-button" onclick="changeImage(-1)" disabled>Anterior</button>
-    <span id="page-number">Página 1</span>
+    <span id="page-number">Página 1 de 3</span>
     <button id="next-button" onclick="changeImage(1)">Próximo</button>
   </div>
 
