--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class="header">
     <h1>Comiks</h1>
     <div class="language-select">
-      <label for="language">Língua:</label>
+      <label id="language-label" for="language">Língua:</label>
       <select id="language" onchange="changeLanguage(this.value)">
-        <option value="pt-br">Português</option>
-        <option value="eng">Inglês</option>
+        <option value="pt">Português</option>
+        <option value="en">Inglês</option>
       </select>
     </div>
   </div>
