--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="language-select">
       <label id="language-label" for="language">Língua:</label>
       <select id="language" onchange="changeLanguage(this.value)">
-        <option value="pt">Português</option>
-        <option value="en">Inglês</option>
+        <option value="pt-br">Português</option>
+        <option value="eng">Inglês</option>
       </select>
     </div>
   </div>
 
   <div class="comic-container">
-    <img id="comic-image" src="The Comics/comic1.png" alt="Webcomic">
+    <img id="comic-image" src="The Comics/pt-br/comic1.png" alt="Webcomic">
   </div>
 
   <div class="nav-buttons">
