--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <label id="language-label" for="language">Língua:</label>
       <select id="language" onchange="changeLanguage(this.value)">
         <option value="pt-br">Português</option>
-        <option value="eng">Inglês</option>
+        <option value="eng">English</option>
       </select>
     </div>
   </div>
