--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="eng">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
   </div>
 
   <div class="comic-container">
-    <img id="comic-image" src="The Comics/pt-br/comic1.png" alt="Webcomic">
+    <img id="comic-image" src="The Comics/eng/comic1.png" alt="Webcomic">
   </div>
 
   <div class="nav-buttons">
