--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="header">
     <h1>Comiks</h1>
     <div class="language-select">
-      <label id="language-label" for="language">Língua:</label>
+      <label id="language-label" for="language">Language:</label>
       <select id="language" onchange="changeLanguage(this.value)">
         <option value="eng">English</option>
         <option value="pt-br">Português</option>
@@ -26,9 +26,9 @@
   </div>
 
   <div class="nav-buttons">
-    <button id="prev-button" onclick="changeImage(-1)" disabled>Anterior</button>
-    <span id="page-number">Página 1 de 3</span>
-    <button id="next-button" onclick="changeImage(1)">Próximo</button>
+    <button id="prev-button" onclick="changeImage(-1)" disabled>Previous</button>
+    <span id="page-number">Page 1 of 3</span>
+    <button id="next-button" onclick="changeImage(1)">Next</button>
   </div>
 
   <script src="script.js"></script>
